frontend/tests/test_log_success.txt

> frontend@0.0.0 test
> ng test --watch=false --browsers=ChromeHeadlessNoSandbox --code-coverage

node.exe : - Generating browser 
application bundles (phase: setup)...
At line:1 char:1
+ & "C:\Program 
Files\nodejs/node.exe" "C:\Program 
Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpec 
   ified: (- Generating br...hase: s  
  etup)...:String) [], RemoteExcept   
 ion
    + FullyQualifiedErrorId : NativeC 
   ommandError
 
Γ£ö Browser application bundle 
generation complete.
[32m10 12 2025 15:23:19.087:INFO [karma-server]: [39mKarma v6.4.4 server started at http://localhost:9876/
[32m10 12 2025 15:23:19.089:INFO [launcher]: [39mLaunching browsers ChromeHeadlessNoSandbox with concurrency unlimited
[32m10 12 2025 15:23:19.092:INFO [launcher]: [39mStarting browser ChromeHeadless
[32m10 12 2025 15:23:20.450:INFO [Chrome Headless 142.0.0.0 (Windows 10)]: [39mConnected on socket 3ZbkbwsHMoEQ-lBdAAAB with id 89327627
Chrome Headless 142.0.0.0 (Windows 10): Executed 0 of 13[32m SUCCESS[39m (0 secs / 0 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 1 of 13[32m SUCCESS[39m (0 secs / 0.063 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 2 of 13[32m SUCCESS[39m (0 secs / 0.069 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 3 of 13[32m SUCCESS[39m (0 secs / 0.172 secs)
[1A[2KWARN: [36m'[2025-12-10T21:23:21.765Z] Warning: Error from HTTP request. TypeError: Failed to fetch.'[39m
Chrome Headless 142.0.0.0 (Windows 10): Executed 3 of 13[32m SUCCESS[39m (0 secs / 0.172 secs)
WARN: '[2025-12-10T21:23:21.765Z] Warning: Error from HTTP request. TypeError: Failed to fetch.'
[1A[2KERROR: [36m'[2025-12-10T21:23:21.766Z] Error: Failed to complete negotiation with the server: TypeError: Failed to fetch'[39m
Chrome Headless 142.0.0.0 (Windows 10): Executed 3 of 13[32m SUCCESS[39m (0 secs / 0.172 secs)
ERROR: '[2025-12-10T21:23:21.766Z] Error: Failed to complete negotiation with the server: TypeError: Failed to fetch'
[1A[2KERROR: [36m'[2025-12-10T21:23:21.766Z] Error: Failed to start the connection: Error: Failed to complete negotiation with the server: TypeError: Failed to fetch'[39m
Chrome Headless 142.0.0.0 (Windows 10): Executed 3 of 13[32m SUCCESS[39m (0 secs / 0.172 secs)
ERROR: '[2025-12-10T21:23:21.766Z] Error: Failed to start the connection: Error: Failed to complete negotiation with the server: TypeError: Failed to fetch'
[1A[2KERROR: [36m'Error while starting connection: Error: Failed to complete negotiation with the server: TypeError: Failed to fetch'[39m
Chrome Headless 142.0.0.0 (Windows 10): Executed 3 of 13[32m SUCCESS[39m (0 secs / 0.172 secs)
ERROR: 'Error while starting connection: Error: Failed to complete negotiation with the server: TypeError: Failed to fetch'
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 4 of 13[32m SUCCESS[39m (0 secs / 0.176 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 5 of 13[32m SUCCESS[39m (0 secs / 0.182 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 6 of 13[32m SUCCESS[39m (0 secs / 0.184 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 7 of 13[32m SUCCESS[39m (0 secs / 0.203 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 8 of 13[32m SUCCESS[39m (0 secs / 0.204 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 9 of 13[32m SUCCESS[39m (0 secs / 0.208 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 10 of 13[32m SUCCESS[39m (0 secs / 0.216 secs)
[1A[2KLOG: [36m'Games Component Initialized'[39m
Chrome Headless 142.0.0.0 (Windows 10): Executed 10 of 13[32m SUCCESS[39m (0 secs / 0.216 secs)
LOG: 'Games Component Initialized'
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 11 of 13[32m SUCCESS[39m (0 secs / 0.229 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 12 of 13[32m SUCCESS[39m (0 secs / 0.232 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 13 of 13[32m SUCCESS[39m (0 secs / 0.259 secs)
[1A[2KChrome Headless 142.0.0.0 (Windows 10): Executed 13 of 13[32m SUCCESS[39m (0.287 secs / 0.259 secs)
[32mTOTAL: 13 SUCCESS[39m
Γ£ö Browser application bundle 
generation complete.

=============================== Coverage summary ===============================
Statements   : 35.3% ( 173/490 )
Branches     : 8.82% ( 9/102 )
Functions    : 26.57% ( 38/143 )
Lines        : 36.32% ( 166/457 )
================================================================================
Γ£ö Browser application bundle 
generation complete.
